--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 certifi==2022.9.24
 charset-normalizer==2.1.1
+et-xmlfile==1.1.0
 idna==3.4
 numpy==1.23.3
+openpyxl==3.0.10
 pandas==1.5.0
 python-dateutil==2.8.2
 pytz==2022.4
