--- a/mpei-bot.service
+++ b/mpei-bot.service
@@ -6,7 +6,7 @@ Description=FinArbitr Server
 
 Type=oheshot
 
-ExecStart=/usr/sbin/runuser -l fa -c '/home/john/mpei-bot/venv/bin/python /home/john/mpei-bot/bot_mpei.py'
+ExecStart=/usr/sbin/runuser -l john -c '/home/john/mpei_bot/venv/bin/python /home/john/mpei_bot/bot_mpei.py'
 
 [Install]
 
